# wayland-protocols

./: .gitlab-ci.yml  GOVERNANCE  GOVERNANCE.md  MEMBERS  MEMBERS.md  Makefile.am  README  README.md  configure.ac  meson.build  wayland-protocols.pc.in
debian/: changelog  control  copyright  watch
debian/source/: local-options  options
debian/tests/: control
stable/linux-dmabuf/: linux-dmabuf-v1.xml
stable/presentation-time/: presentation-time.xml
stable/xdg-shell/: xdg-shell.xml
staging/color-management/: README
staging/content-type/: content-type-v1.xml
staging/drm-lease/: README  drm-lease-v1.xml
staging/ext-image-capture-source/: README
staging/ext-image-copy-capture/: README  ext-image-copy-capture-v1.xml
staging/ext-session-lock/: ext-session-lock-v1.xml
staging/security-context/: engines.md  security-context-v1.xml
staging/tearing-control/: tearing-control-v1.xml
staging/xdg-activation/: x11-interoperation.rst  xdg-activation-v1.xml
staging/xdg-toplevel-drag/: README
tests/: meson.build
unstable/linux-dmabuf/: feedback.rst  linux-dmabuf-unstable-v1.xml
unstable/xdg-decoration/: xdg-decoration-unstable-v1.xml
unstable/xdg-output/: xdg-output-unstable-v1.xml
unstable/xdg-shell/: xdg-shell-unstable-v6.xml
